2017-02-22  Edward Jones  <ed.jones@embecosm.com>

	* Features.h: Distinquish between FunctionFeature and ModuleFeatures
	again, to help with debug.

2017-01-25  Edward Jones  <ed.jones@embecosm.com>

	* Plugin.cpp: Use a mangled name for functions in the feature
	extractor.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* Plugin.cpp: In the output features, use an absolute path for the
	filename and the basename of the module as the module name.

2017-01-16  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Fix to work with older GCC versions where
	malloc+calloc are poisoned by the plugin headers.
	* Plugin.cpp: Likewise.

2016-11-29  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Fix to work with all GCC versions >=4.8.0
	* Plugin.cpp: Likewise.

2016-10-25  Edward Jones  <ed.jones@embecosm.com>

	* Features.h: No longer used distinct identifiers in the
	FunctionFeature and ModuleFeature enumerations.
	* Plugin.cpp (featureExtractFinishUnit): Add an extra feature_class
	entry to each line in the output file, specifying the feature class
	which the set of extracted features belongs to.

2016-10-25  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Fix minor incompatibilites with gcc.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Plugin.cpp: FeatureGroupID entries in the output file are
	marked with 'features', instead of 'feature_group'.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Fix indentation.
	* Plugin.cpp: Likewise.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Plugin.cpp: FeatureGroupID Entries in the output file are
	marked with 'features', instead of 'feature_group'.

2016-08-15  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Rename feature_extract_gcc target to
	gcc_feature_extract

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Update flag setting when building plugin.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>
