@@ -1,3 +1,7 @@
+2017-03-03  Edward Jones  <ed.jones@embecosm.com>
+
+	* Plugin.cpp: Add -sql-trace argument to plugin.
+
 2017-02-22  Edward Jones  <ed.jones@embecosm.com>
 
 	* Features.h: Distinquish between FunctionFeature and ModuleFeatures
